# tiff_mtg

./: README.md  pyproject.toml  todo.md
src/: index.py  main.py
src/entitys/: art.py  card.py
src/repository/: card.py
src/services/: card.py  image_sticher.py  logic_service.py  pdf_sticher.py  text_splicer.py  ui_service.py
src/ui/: confirm_view.py  main_view.py  progres_view.py  ui.py
