[tool.poetry]
name = "tiff-mtg"
version = "0.1.0"
description = ""
authors = ["levitesuo <leevi.suotula@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
matplotlib = "^3.8.4"
grequests = "^0.7.0"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
